# programming_dna_libary

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
include/: book_collection.hpp  book_filter.hpp  library.hpp  user.hpp  user_session.hpp
include/fundamental/: book.hpp  book_collection.hpp  collection.hpp  library.hpp  user.hpp
include/interactive/: book_copy.hpp  book_filter.hpp  filter.hpp  librarian.hpp  user_session.hpp
include/management/: book_log.hpp  cart.hpp
include/ui/: book_action_buttons.hpp  book_table.hpp  book_view.hpp  cart_screen.hpp  login_modal.hpp  main_view.hpp  search_screen.hpp  text_observer.hpp
include/util/: book_collection.hpp  events.hpp  get_executable_path.hpp  password.hpp  string_utils.hpp  uuid.hpp
include/views/: book_table.hpp  book_view.hpp  cart_screen.hpp  main_view.hpp  search_screen.hpp
resources/: book_collection.json  user_collection.json
src/: main.cpp
